--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
   "dependencies": {
     "axios": "^1.12.2",
     "pinia": "^3.0.3",
-    "vue": "^3.5.22",
-    "vue-router": "^4.6.3"
+    "vue": "^3.5.22"
   },
   "devDependencies": {
-    "@types/node": "^24.9.1",
+    "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/eslint-config-typescript": "^14.6.0",
     "typescript": "^5.9.3",
     "vite": "^7.1.11",
     "vite-plugin-vue-devtools": "^8.0.3",
+    "vue-router": "^4.6.3",
     "vue-tsc": "^3.1.1"
   }
 }
