--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "axios": "^1.12.2",
+    "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
     "pinia": "^3.0.3",
+    "tailwindcss": "^4.1.17",
     "vue": "^3.5.22"
   },
   "devDependencies": {
